--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -17,8 +17,11 @@ spring:
       ddl-auto: validate
       naming:
         physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
-    show-sql: false
+    show-sql: true
     database: mysql
+    properties:
+      hibernate:
+        format_sql: true
   redis:
     port: 6379
     host: 127.0.0.1
