--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -14,7 +14,7 @@ spring:
   jpa:
     database-platform: org.hibernate.dialect.MySQL5Dialect
     hibernate:
-      ddl-auto: update
+      ddl-auto: create
       naming:
         physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
     show-sql: true
@@ -25,10 +25,6 @@ spring:
   redis:
     port: 6379
     host: 127.0.0.1
-  sql:
-    init:
-      mode: embedded
-      data-locations: classpath:bckpck_schema.sql
 logging:
   level:
     root: info
